<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="show_msg">很抱歉，该应用不支持此机型！</string>
    <string name="show_msg_ok">好</string>
    <string name="about_us">关于我们</string>
    <string name="about_vist">访问AED的网站</string>
    <string name="about_us_details">版本 : 1.0.1 \n<b> \u0020\u0020\u0020\u0020\u0020\u0020\u0020AED团队</b>专业提供安卓上个性化的UI深度定制和应用解决方案。致力于帮助客户快速进入安卓终端市场，缩短产品开发周期，并提供后续的系统升级和维护等服务。\n联系电话：<b>020-85213857</b>\n公司网址：<b>www.aedesign.cn</b>\n邮箱：<b>support@aedesign.cn</b></string>
    <string name="ringtone_default">Default ringtone</string>
    <string name="ringtone_silent">Silent</string>
    <string name="clock_am_text">上午</string>
    <string name="clock_pm_text">下午</string>
    <string name="clock_today_text">今天</string>
    <string name="clock_tomorrow_text">明天</string>
    <string name="clock_yesterday_text">昨天</string>
    <string name="well">好</string>
    <string name="time_done">计时结束</string>
    <string name="world_clock_title">世界时钟</string>
    <string name="no_clock_text">无世界时钟</string>
    <string name="no_result_text">未找到结果</string>
    <string name="timer_selecotr_title">时间选择控件</string>
    <string name="iphone_timer_alert_voice_title">计时结束时，启用</string>
    <string name="iphone_timer_alert_voice_confirm">设定</string>
    <string name="iphone_world_clock_title">世界时钟</string>
    <string name="world_clock_area_text">广州</string>
    <string name="zone_list_title">搜索城市以添加到世界时钟上。</string>
    <string name="stop_watch_title">秒表</string>
    <string name="defualt_time_text">00:00.0</string>
    <string name="stopwatch_start_button_text">启动</string>
    <string name="stopwatch_stop_button_text">停止</string>
    <string name="stopwatch_reset_button_text">复位</string>
    <string name="stopwatch_shot_button_text">计次</string>
    <string name="timer_title">计时器</string>
    <string name="timer_alert_voice_title">计时结束时，启用</string>
    <string name="timer_alert_voice_text">重复琴声</string>
    <string name="timer_start_button_text">启动</string>
    <string name="timer_cancel_button_text">取消</string>
    <string name="iphone_timer_sleep_type_voice">iPod睡眠模式</string>
    <string name="hour_text">小时</string>
    <string name="minute_text">分钟</string>
    <string name="alarm_clock_title">闹钟</string>
    <string name="no_alarm_text">无闹钟</string>
    <string name="save_alarm">存储</string>
    <string name="back">返回</string>
    <string name="repeat">重复</string>
    <string name="vibrate">声音</string>
    <string name="sleep">小睡</string>
    <string name="defualt_alert_voice">默认</string>
    <string name="snooze">再响间隔</string>
    <string name="every_monday">每周一</string>
    <string name="every_tuesday">每周二</string>
    <string name="every_wednesday">每周三</string>
    <string name="every_thursday">每周四</string>
    <string name="every_friday">每周五</string>
    <string name="every_saturday">每周六</string>
    <string name="every_sunday">每周日</string>
    <string name="btn_done">完成</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_cancel">取消</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="twenty_five">25</string>
    <string name="thirty">30</string>
    <string name="app_label">闹钟</string>
    <string name="add_alarm">添加闹钟</string>
    <string name="delete_alarm">取消闹钟</string>
    <string name="enable_alarm">启用闹钟</string>
    <string name="disable_alarm">停用闹钟</string>
    <string name="delete_alarm_confirm">将会取消此闹钟。</string>
    <string name="show_clock">显示时钟</string>
    <string name="hide_clock">隐藏时钟</string>
    <string name="label">标签</string>
    <string name="default_label">闹钟</string>
    <string name="set_alarm">编辑闹钟</string>
    <string name="alarm_vibrate">振动</string>
    <string name="alarm_repeat">重复</string>
    <string name="alert">铃声</string>
    <string name="time">时间</string>
    <string name="alarm_alert_dismiss_text">取消</string>
    <string name="alarm_alert_alert_silenced">闹钟响了\n%d	分钟后停止</string>
    <string name="alarm_alert_snooze_text">暂停再响</string>
    <string name="alarm_alert_snooze_set">暂停\n%d	分钟后再响。</string>
    <string name="day">1 天</string>
    <string name="days">%s 天</string>
    <string name="hour">1 小时</string>
    <string name="hours">%s 小时</string>
    <string name="minute">1 分钟</string>
    <string name="minutes">%s 分钟</string>
    <string name="every_day">每天</string>
    <string name="never">永不</string>
    <string name="day_concat">\u0020</string>
    <string name="clock_instructions">选择要显示的时钟。</string>
    <string name="analog_gadget">模拟时钟</string>
    <string name="settings">设置</string>
    <string name="alarm_in_silent_mode_title">静音模式下闹钟响</string>
    <string name="alarm_in_silent_mode_summary">手机处于静音模式时，闹钟仍会响</string>
    <string name="snooze_duration_title">再响间隔</string>
    <string name="done">完成</string>
    <string name="revert">还原</string>
    <string name="alarm_volume_title">闹钟音量</string>
    <string name="alarm_volume_summary">设置闹钟音量</string>
    <string name="silent_alarm_summary">静音</string>
    <string name="alarm_notify_text">选择暂停或关闭此闹钟。</string>
    <string name="alarm_notify_snooze_label">%s（已暂停）</string>
    <string name="alarm_notify_snooze_text">已将此闹钟设置在 %s启动。选择即可取消。</string>
    <string name="volume_button_setting_title">侧边按钮功用</string>
    <string name="volume_button_setting_summary">设置侧边按钮在闹钟启动时的功用</string>
    <string name="iphone_tv_default">默认</string>
    <string name="iphone_tv_standard">标准</string>
</resources>