<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen android:title="@string/set_alarm"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/time" android:key="time" />
    <com.aedesign.deskclock.alarmclock.AlarmPreference android:persistent="false" android:title="@string/alert" android:key="alarm" android:ringtoneType="alarm" android:showDefault="false" android:showSilent="true" />
    <CheckBoxPreference android:persistent="false" android:title="@string/alarm_vibrate" android:key="vibrate" />
    <com.aedesign.deskclock.alarmclock.RepeatPreference android:persistent="false" android:title="@string/alarm_repeat" android:key="setRepeat" />
    <EditTextPreference android:persistent="false" android:title="@string/label" android:key="label" android:dialogTitle="@string/label" />
</PreferenceScreen>