<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/iphone_activity_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="top" android:orientation="horizontal" android:background="@drawable/header_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_iphone_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="\@style/IPhone_Button_Left_DarkBLue_Style" />
        <TextView android:id="@id/textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/iphone_timer_alert_voice_title" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="\@style/Header_TextView_Style" />
        <Button android:id="@id/btn_timer_alert_voice_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/iphone_timer_alert_voice_confirm" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="\@style/IPhone_Button_Right_LightBlue_Style" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/linearlayout_iphonecontact_ringdefault" android:layout_width="300.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" />
            <LinearLayout android:orientation="vertical" android:id="@id/linearlayout_iphonecontact_ringstandard" android:layout_width="300.0dip" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>