<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/iphone_activity_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:background="@drawable/zone_list_search_bar_head_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="@android:color/black" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/zone_list_title" android:singleLine="true" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <EditText android:id="@id/edit_text" android:background="@drawable/zone_list_edit_text" android:paddingLeft="33.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:singleLine="true" android:maxLength="22" android:layout_centerVertical="true" />
            <Button android:id="@id/btn_clear" android:background="@drawable/iphone_clean_icon" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="65.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <Button android:id="@id/btn_cancel" android:background="@drawable/zone_list_cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/btn_cancel" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="\@style/IPhone_Button_Right_DarkBLue_Style" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ListView android:id="@id/list_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@android:color/transparent" android:cacheColorHint="#00000000" />
        <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:id="@id/no_result" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="51.0dip" android:text="@string/no_result_text" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>